--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,9 +21,9 @@ jobs:
     - name: Extract FB Ads
       env:
           FB_TOKEN: ${{ secrets.FB_TOKEN }}
-      run: Rscript fb_ads_extraction_10_plus.R
+      run: Rscript 01_ads_extract_10_plus.R
     - name: Create summary tables 
-      run: Rscript fb_ads_summary_tables.R
+      run: Rscript 03_create_summary_tables.R
       
  # Add new files in specified folder, commit along with other modified files, push
     - name: Commit files
