--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,7 +13,7 @@ jobs:
   extract:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    container: rocker/tidyverse
+    container: rocker/tidyverse:latest
 
     # Load repo and run the extraction script
     steps:
