--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,8 +8,8 @@ on:
     - cron:  '00 12 * * *'
   push:
     branches: master
-    
-jobs: 
+
+jobs:
   extract:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -18,17 +18,19 @@ jobs:
     # Load repo and run the extraction script
     steps:
     - uses: actions/checkout@v2
+    - name: Compile monitored pages list
+      run: Rscript 00_save_pages_list.R
     - name: Extract FB Ads
       env:
           FB_TOKEN: ${{ secrets.FB_TOKEN }}
       run: Rscript 01_ads_extract_10_plus.R
-    - name: Create summary tables 
+    - name: Create summary tables
       run: Rscript 02_create_summary_tables.R
     - name: Install Flexdashboard package
       run: Rscript -e "install.packages('flexdashboard')"
-    - name: Update Dashboard for GitHub Pages  
+    - name: Update Dashboard for GitHub Pages
       run: Rscript -e "rmarkdown::render('index.Rmd')"
-      
+
  # Add new files in specified folder, commit along with other modified files, push
     - name: Commit files
       run: |
