--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,18 +19,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Compile monitored pages list
-      run: Rscript 00_save_pages_list.R
+      run: Rscript --vanilla 00_save_pages_list.R
     - name: Extract FB Ads
     # This action needs a FB API token as an environment variable (we are using GitHub Secrets)
       env:
           FB_TOKEN: ${{ secrets.FB_TOKEN }}
-      run: Rscript 01_ads_extract_10_plus.R
+      run: Rscript --vanilla 01_ads_extract_10_plus.R
     - name: Create summary tables
-      run: Rscript 02_create_summary_tables.R
+      run: Rscript --vanilla 02_create_summary_tables.R
     - name: Install Flexdashboard package
       run: Rscript -e "install.packages('flexdashboard')"
     - name: Update Dashboard for GitHub Pages
-      run: Rscript -e "rmarkdown::render('index.Rmd')"
+      run: Rscript --vanilla -e "rmarkdown::render('index.Rmd')"
 
  # Add new files in specified folder, commit along with other modified files, push
     - name: Commit files
