--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,6 +24,7 @@ jobs:
     # This action needs a FB API token as an environment variable (we are using GitHub Secrets)
       env:
           FB_TOKEN: ${{ secrets.FB_TOKEN }}
+          GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
       run: Rscript 01_ads_extract_10_plus.R
     - name: Create summary tables
       run: Rscript 02_create_summary_tables.R
