--- a/.github/workflows/docker_temp.yml
+++ b/.github/workflows/docker_temp.yml
@@ -25,9 +25,9 @@ jobs:
       env:
           FB_TOKEN: ${{ secrets.FB_TOKEN }}
           GITHUB_PAT: ${{ secrets.GH_PAT }}
-      run: Rscript 01_ads_extract_10_plus.R
+      run: Rscript 01_ads_extract_temp.R
     - name: Create summary tables
-      run: Rscript 02_create_summary_tables.R
+      run: Rscript 02_create_summary_tables_temp.R
     - name: Install Flexdashboard package
       run: Rscript -e "install.packages('flexdashboard')"
     - name: Update Dashboard for GitHub Pages
